Fri Feb 03 18:39:24 1995  Chris Provenzano (proven@mit.edu)

	* kprop.c Use krb5_get_in_tkt_with_keytab() instead of
		 krb5_get_in_tkt_with_skey().

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Thu Nov 17 18:31:18 1994  Mark Eichin  (eichin@cygnus.com)

	* kprop.c: Use NPROTOTYPE for declarations.
	(close_database): New function. Cleans up locks properly.
	(main): call it.
	(open_database): Use krb5_lock_file instead of POSIX_FILE_LOCKS.
	* kpropd.c (doit): Use krb5_lock_file.
	(changes from jtkohl@mit.edu.)

Mon Oct  3 19:13:46 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Use $(srcdir) to find manual page for make install.

Thu Sep 29 22:15:27 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executable if libraries change.

	* kprop.c (open_connection): Use getsockname instead of
		getpeername when getting the sender address.

Thu Sep 15 12:48:21 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kpropd.c (PRS): Only report errors to syslog if the debug flag
	is not set.  (Otherwise, send them to stderr).

Thu Aug  4 15:15:00 1994  Tom Yu  (tlyu@dragons-lair)

	* configure.in:
	* kpropd.c: include <sgtty.h> only if POSIX_TERMIOS is not defined

Sat Jul 16 00:01:41 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* kpropd.c (do_standalone): Replace detach_process() with call to
	  daemon(), which we can now guarantee will be in libc or in the
	  Kerberos library.

