@@ -1,3 +1,10 @@
+Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)
+
+        * kprop.c Call krb5_sendauth() with new calling convention.
+
+	* kprop.c (kerberos_authenticate()), (xmit_database()), cleaned up
+		to not use globals. Instead use krb5_creds * args.
+
 Fri Feb 03 18:39:24 1995  Chris Provenzano (proven@mit.edu)
 
 	* kprop.c Use krb5_get_in_tkt_with_keytab() instead of
